--- a/annotation_code/genes/geneClustering.Rmd
+++ b/annotation_code/genes/geneClustering.Rmd
@@ -66,7 +66,7 @@ colnames(metadata)<-c("specie", "quality", "tissue_abv", "rep", "location")
 moduleList<-levels(genemodule$modules)
 table(genemodule$modules)
 #Data selection
-ME<-"brown" #green #lightcyan #turquoise
+ME<-"blue" #green #lightcyan #turquoise
 genemodule$genes<-rownames(genemodule)
 MEgeneList<-rownames(genemodule[genemodule$modules==ME,])
 dataNL<-dataNL[MEgeneList,]
@@ -463,8 +463,9 @@ kres<-kmeans(ctf_data, km_num)
 
 plot(shortened_umap$layout, col=kres$cluster, lwd=3)
 
-#("../report/presentation/images/Kmean_pcaColor.png", width=1600, height=800)
-plot(shortened_pca$x, col=kres$cluster, lwd=3, main=paste0("PCA colored according to kmeans centroids=", km_num))
+setwd("..")
+#png("../report/manuscript/images/Kmean_pcaColor.png", width=1600, height=800)
+plot(shortened_pca$x, col=kres$cluster, lwd=3, main=paste0("PCA for ", ME, " module\nK-means centroids=", km_num))
 #dev.off()
 ```
 
