--- a/annotation_code/genes/geneClustering.Rmd
+++ b/annotation_code/genes/geneClustering.Rmd
@@ -66,7 +66,7 @@ colnames(metadata)<-c("specie", "quality", "tissue_abv", "rep", "location")
 moduleList<-levels(genemodule$modules)
 table(genemodule$modules)
 #Data selection
-ME<-"blue" #green #lightcyan #turquoise
+ME<-"turquoise" #green #lightcyan #turquoise
 genemodule$genes<-rownames(genemodule)
 MEgeneList<-rownames(genemodule[genemodule$modules==ME,])
 dataNL<-dataNL[MEgeneList,]
